fix double scroll bar in firefox

--- a/css/master.css
+++ b/css/master.css
@@ -44,6 +44,7 @@ body {
 html, body {
   margin: 0px;
   padding: 0px;
+  height: 100%;
 }
 a {
   text-decoration: none;
